# ROS_sensor_integration

./: .gitignore
SmartCollect/: .gitignore  deploy_smartc.sh  install_wifi_driver.sh  interface.sh  interfaces  lidar文件数据帧格式.txt  ntd_sensors.sh  test.launch
SmartCollect/3rd/: .gitignore
SmartCollect/config/: 83-usb-serial.rules  Calibration.json  camera_config.json  hik_config.yaml  sensor_type.yaml  vehicle-dikuencoder.yaml  四维图新5651配置说明及使用_20190430.txt
SmartCollect/doc/Ubuntu14.04+opencv3.3 安装教程/: opencv3.3-ubuntu14.04-install.md
SmartCollect/src/: .gitignore  log4j.properties
SmartCollect/src _branch_tmi/sc_map/: CMakeLists.txt
SmartCollect/src _branch_tmi/sc_ptgrey_camera/: package.xml
SmartCollect/src _branch_tmi/tools/: R_Fans_32_test.sh  force_ip_per_minute  launch_project.sh  node_kill_exit.sh  test.sh
SmartCollect/src _branch_tmi/web/: camera.jsp  login.html  monitor.jsp
SmartCollect/src _branch_tx2/: log4j.properties
SmartCollect/src/SmartCollectorDalmer/detection/: CMakeLists.txt  detection.cpp  detection.h  detection_cuda.cpp  detection_cuda.h
SmartCollect/src/SmartCollectorDalmer/detection_cpu/: CMakeLists.txt  detection_cpu.cpp  detection_cpu.h
SmartCollect/src/SmartCollectorDalmer/main_project/: CMakeLists.txt  data_input.cpp  data_input.h  data_output.cpp  data_output.h
SmartCollect/src/sc_hik_camera/: CMakeLists.txt  README-CH  README-EN  package.xml
SmartCollect/src/sc_hik_camera/include/: PixelType.h  TlFactory.h
SmartCollect/src/sc_hik_camera/include/libjpeg-turbo/: tjexample.c
SmartCollect/src/sc_hik_camera/src/: Grab_ImageCallback.cpp  Grab_ImageCallback_arm.cpp  ImageProc.cpp  can_killer.cc  can_parser.cpp  can_parser.h  can_test.cpp  comm_timer.cpp  comm_timer.h  global_param.hpp  hik_camera.cpp  hik_camera.h  hik_camera_arm.cpp  hik_camera_arm.h  hik_camera_arm_node.cpp  hik_camera_manager.cpp  hik_camera_manager.h  hik_camera_node.cpp  hik_node.cpp  integration_base.h  integration_base2.h  save_image_task.cpp  save_image_task.h  serial_reader.cpp  serial_reader.h  serial_reader_test.cpp  single_camera.cpp  single_camera.h  test.cc
SmartCollect/src/sc_hik_camera/src/Grab_ImageCallback/: Grab_ImageCallback.cpp  Makefile
SmartCollect/src/sc_hik_camera/src/LCamera/: LCamera.cpp  LCamera.h
SmartCollect/src/sc_hik_camera/src/camera2/include/camodocal/camera_models/: CataCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
SmartCollect/src/sc_hik_camera/src/camera2/include/camodocal/gpl/: EigenQuaternionParameterization.h
SmartCollect/src/sc_hik_camera/src/camera2/src/calib/: CameraCalibration.cc
SmartCollect/src/sc_hik_camera/src/camera2/src/camera_models/: CataCamera.cc  PinholeCamera.cc
SmartCollect/src/sc_hik_camera/src/estimator/: VINS.cpp  VINS.hpp
SmartCollect/src/sc_hik_camera/src/example/: main_honor8.cpp  main_tx2.cpp
SmartCollect/src/sc_hik_camera/src/factor/: YawLocalParameterization.cpp  YawLocalParameterization.h  encoder_displacement_factor.cpp  encoder_displacement_factor.h  imu_timefactor.h  pose_local_parameterization.hpp  speedprior.h  synchronization_facotor.cpp
SmartCollect/src/sc_hik_camera/src/feature/: feature_manager.cpp  feature_manager.hpp  feature_tracker.cpp  feature_tracker.hpp
SmartCollect/src/sc_hik_camera/src/hik_save_image/: MvCameraControl.h  hik_camera_arm.cpp  hik_camera_arm.h  hik_camera_arm_node.cpp  image_task.cpp  image_task.h  threadpool_test.cpp
SmartCollect/src/sc_hik_camera/src/include/: CameraParams.h  MvCameraControl.h
SmartCollect/src/sc_hik_camera/src/initial/: initial_aligment.cpp  initial_aligment.hpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.hpp  motion_estimator.cpp  motion_estimator.hpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/Display/: Display.cpp  Makefile
SmartCollect/src/sc_hik_camera/src/linux_demo_64/ForceIP/: ForceIP.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/GrabImage/: GrabImage.cpp  Makefile
SmartCollect/src/sc_hik_camera/src/linux_demo_64/GrabMultipleCamera/: GrabMultipleCamera.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/Grab_ImageCallback/: Grab_ImageCallback.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/ReconnectDemo/: ReconnectDemo.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/SetIO/: Makefile
SmartCollect/src/sc_hik_camera/src/linux_demo_64/SetParam/: SetParam.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/Trigger_Image/: Trigger_Image.cpp
SmartCollect/src/sc_hik_camera/src/linux_demo_64/Trigger_ImageCallback/: Makefile  Trigger_ImageCallback.cpp
SmartCollect/src/sc_hik_camera/src/loop/: demoDetector.h  keyframe_database.cpp  keyframe_database.h  loop_closure.h
SmartCollect/src/sc_hik_camera/src/system/: system.cpp  system.h
SmartCollect/src/sc_hik_camera/src/utility/: utility.cpp  utility.hpp
SmartCollect/src/sc_hik_camera/src/viewer/: MapDrawer.cpp  MapDrawer.h  Viewer.cpp  Viewer.h
SmartCollect/src/tools/: .gitignore  5651.conf  AdditionCycles.cc  BiTree.cc  CMakeLists.txt  R_Fans_32_test.sh  binary_search_get_target_count.cc  building_rooms.cc  dynamic_vector.cc  erode_dilate.cpp  event.cpp  find_only_one_int_1.cc  force_ip_per_minute  force_ip_per_minute.sh  get_jiaoji.cc  hello.proto  interface.sh  is_ascend_recursion.cc  is_prime.cc  launch_project.sh  launch_project_tx2_imua1.sh  lib.sh  liblog.sh  linux_serial_comm_select.cpp  linux_serial_comm_timer.cpp  lm.helloworld.proto  mylinedetect.cpp  parseXml.py  parse_xml.py  read_serial.cpp  recursive_sum.cc  resize  reverse_integer.cc  ros_daemon.bash  ros_daemon.sh  saveInRealTime.sh  set_5651.py  start_slam.sh  task_config.py  test.cc  (+6 more)
SmartCollect/src/tools/camera_force_ip/: Makefile  camera_force_ip.h  camera_force_ip_main.cpp
SmartCollect/src/tools/shp2mars/: Makefile  test.cpp  test.h  test_main.cpp  to_mars.cpp  to_mars_main.cpp
SmartCollect_dev/: deploy_smartc.sh  interface.sh  ntd_sensors.sh
SmartCollect_dev/src/: .gitignore  image_copy.sh
SmartCollect_dev/src/velodyne/velodyne_driver/src/lib/: CMakeLists.txt  input.cc
catkin_sensors/: ntd_sensors.sh  sensors_20171016.tgz
(+695 files in other folders)
